<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>experiment</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <modules>
    <module>child-module</module>
  </modules>

  <properties>
<!--    <maven.compiler.source>11</maven.compiler.source>-->
<!--    <maven.compiler.target>11</maven.compiler.target>-->
    <junit.version>4.12</junit.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
       <version>3.10.1</version>
      <configuration>
        <source>11</source>
        <target>11</target>
        <compilerArgs>
          <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
          <arg>--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
          <arg>--add-exports=jdk.jfr/jdk.jfr.internal=ALL-UNNAMED</arg>
          <arg>--add-exports=jdk.jfr/jdk.jfr.internal.jfc=ALL-UNNAMED</arg>
          <arg>--add-exports=jdk.internal.vm/jdk.vm.ci.meta=ALL-UNNAMED</arg>
          <arg>--add-exports=org.graalvm.sdk/org.graalvm.nativeimage.impl=ALL-UNNAMED</arg>
<!--          <arg>&#45;&#45;add-modules=jdk.internal.vm.ci</arg>-->
        </compilerArgs>
      </configuration>
      </plugin>

    </plugins>

  </build>
  <dependencies>

    <dependency>
      <groupId>com.google.truth</groupId>
      <artifactId>truth</artifactId>
      <version>1.1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.graalvm.nativeimage</groupId>
      <artifactId>svm</artifactId>
      <version>22.0.0.2</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.graalvm.sdk</groupId>
      <artifactId>graal-sdk</artifactId>
      <version>22.1.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>native</id>

      <dependencies>
        <dependency>
          <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId>
          <version>5.8.1</version>
          <scope>test</scope>
        </dependency>

        <dependency>
          <groupId>org.graalvm.buildtools</groupId>
          <artifactId>junit-platform-native</artifactId>
          <version>0.9.11</version>
          <scope>test</scope>
        </dependency>
      </dependencies>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.0</version>
          </plugin>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.9.11</version> <!-- or newer version -->
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>test-native</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>build</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <configuration>
              <mainClass>com.example.JfrExample</mainClass>
              <buildArgs>
                <buildArg>--no-fallback</buildArg>
                <buildArg>--no-server</buildArg>
                <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
                <arg>--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
                <arg>--add-exports=jdk.jfr/jdk.jfr.internal=ALL-UNNAMED</arg>
                <arg>--add-exports=jdk.jfr/jdk.jfr.internal.jfc=ALL-UNNAMED</arg>
                <arg>--add-exports=jdk.internal.vm/jdk.vm.ci.meta=ALL-UNNAMED</arg>
                <arg>--add-exports=org.graalvm.sdk/org.graalvm.nativeimage.impl=ALL-UNNAMED</arg>
              </buildArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>

    </profile>
  </profiles>
</project>